gcc/testsuite/tiny.dg/test02.tiny
# { dg-do compile }
var i : bool;
i := -1; # { dg-error "cannot assign value of type ‘int’ to a variable of type ‘boolean’" }
